--- a/views/result.haml
+++ b/views/result.haml
@@ -1,29 +1,29 @@
-!!!!
-%html
-  %head
-    %title Результати розрахунку
-  %body
-    %h2 Результати розрахунку по кредиту
-    .inputInfo
-      Процентна ставка: #{@params[:credit_percent]}%
-      %br
-      Сума кредиту: #{@params[:credit_sum]}
-    %table{border:'3', cellpadding:'0', bordercolor:'black', :style => "border-collapse: collapse;"}
-      %tr
-        %th номер місяця
-        %th погашення кредиту
-        %th погашення %
-        %th загальний внесок
-        %th залишок кредиту
-        -(@params[:credit_result].length-1).times do|x|
-          %tr
-            %td
-              =x+1
-            -@params[:credit_result][x].each do |key, value|
-              %td
-                ="%0.2f" % value
-        %td
-        -@params[:credit_result].last.each do |key, value|
+.col-md-8.col-md-offset-2
+  %h1.text-center Результати розрахунку по кредиту
+  Процентна ставка:
+  %b #{@params[:credit_percent]}%
+  %br
+  Сума кредиту:
+  %b #{@params[:credit_sum]}
+  %table.table.table-bordered{style:"border-spacing: 7px 11px"}
+    %tr
+      %th номер місяця
+      %th погашення кредиту
+      %th погашення %
+      %th загальний внесок
+      %th залишок кредиту
+      -(@params[:credit_result].length-1).times do|x|
+        %tr
           %td
-            ="%0.2f" % value
+            =x+1
+          -@params[:credit_result][x].each do |key, value|
+            %td
+              ="%0.2f" % value
+      %td
+      -@params[:credit_result].last.each do |key, value|
         %td
+          ="%0.2f" % value
+      %td
+  %a.btn.btn-primary.btn-lg{href:"/"}
+    %span.glyphicon.glyphicon-home
+    На головну
