--- a/views/index.haml
+++ b/views/index.haml
@@ -1,38 +1,27 @@
-!!!!
-%html
-  %head
-    %title Кредитний онлайн-калькулятор
-  %body
-    %h2 Кредитний онлайн-калькулятор
-    %h3 Кредитні відомості:
-    %form{action:'/result', method:'post' }
-      %table{cellpadding:5}
-        %tr
-          %td
-            %label{for:'procents'} Процентна ставка (%):
-          %td
-            %input#percent{type:'text', size:3, name:'credit_percent'}
-            %br
-            Увага: Дані вводяться через крапку!
-        %tr
-          %td
-            %label{for:'sum'} Сума кредиту:
-          %td
-            %input#sum{type:'text', name:'credit_sum', size:10}
-        %tr
-          %td Метод погашення кредиту:
-          %td
-            %input#standartType{type:'radio', name:'credit_type', value:'standart', checked:true}
-            %label{for:'standartType'} Стандартний
-            %br
-            %input#annuity{type:'radio', name:'credit_type', value:'annuity'}
-            %label{for:'annuity'} Ануїтетний (рівними частинами)
-        %tr
-          %td
-            %label{for:'time'} Термін кредиту (в місяцях):
-          %td
-            %input#time{type:'text', size:5, name:'credit_time'}
-        %tr
-          %td
-          %td
-            %input{type:'submit', value:'Розрахувати'}
+.col-md-6.col-md-offset-3
+  %h1.text-center Кредитний онлайн-калькулятор
+  %form{role:"form" ,action:'/result', method:'post' }
+    %h3.form-calc-heading Кредитні відомості:
+    .form-group
+      %label{for:'procents'} Процентна ставка (%):
+      %input.form-control#percent{type:'text', size:3, name:'credit_percent'}
+      Увага: Дані вводяться через крапку!
+    .form-group
+      %label{for:'sum'} Сума кредиту:
+      %input.form-control#sum{type:'text', name:'credit_sum', size:10}
+    .form-group
+      %label Метод погашення кредиту:
+      .radio
+        %label
+          %input{type:'radio', name:'credit_type', value:'standard', checked:true}
+            Стандартний
+      .radio
+        %label
+          %input{type:'radio', name:'credit_type', value:'annuity'}
+          Ануїтетний (рівними частинами)
+    .form-group
+      %label{for:'time'} Термін кредиту (в місяцях):
+      %input.form-control#time{type:'text', size:5, name:'credit_time'}
+    .form-group
+      %input.btn.btn-success{type:'submit', value:'Розрахувати'}
+      %input.btn.btn-default{type:'reset', value:'Очистити'}
